--- a/test/plugins/scenarios/rocketmq/config/excepted.yml
+++ b/test/plugins/scenarios/rocketmq/config/excepted.yml
@@ -16,13 +16,30 @@
 
 segmentItems:
   - serviceName: rocketmq
-    segmentSize: ge 9
+    segmentSize: 5
     segments:
       - segmentId: not null
         spans:
-          - operationName: RocketMQ/sw-topic/Producer
+          - operationName: GET:/health
             parentSpanId: -1
             spanId: 0
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5004
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: http.method, value: GET }
+              - { key: url, value: 'service:8080/health' }
+              - { key: status_code, value: '200' }
+      - segmentId: not null
+        spans:
+          - operationName: RocketMQ/sw-topic/Producer
+            parentSpanId: 0
+            spanId: 1
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -38,35 +55,9 @@ segmentItems:
               - { key: mq.broker, value: not null }
               - { key: mq.msg.id, value: not null }
               - { key: mq.offset.msg.id, value: not null }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 39
-            isError: false
-            spanType: Entry
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.msg.id, value: not null }
-              - { key: mq.offset.msg.id, value: not null }
-              - { key: mq.topic, value: not null }
-              - { key: mq.broker, value: not null }
-              - { key: mq.status, value: not null }
-            refs:
-              - { parentEndpoint: RocketMQ/sw-topic/Producer, networkAddress: 'http://mqnamesrv:9876',
-                  refType: CrossProcess, parentSpanId: 0, parentTraceSegmentId: not null,
-                  parentServiceInstance: not null, parentService: rocketmq,
-                  traceId: not null }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Producer/Callback
-            parentSpanId: -1
-            spanId: 0
+          - operationName: RocketMQ/sw-topic/Producer/Callback # When calling, first create an Exit span
+            parentSpanId: 0
+            spanId: 2
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -76,12 +67,10 @@ segmentItems:
             peer: http://mqnamesrv:9876
             skipAnalysis: false
             tags:
-              - {key: mq.topic, value: not null}
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Producer/Callback
-            parentSpanId: -1
-            spanId: 0
+              - { key: mq.topic, value: sw-topic }
+          - operationName: RocketMQ/sw-topic/Producer/Callback # The callback task creates a Local span
+            parentSpanId: 2
+            spanId: 3
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -97,35 +86,9 @@ segmentItems:
               - { key: mq.broker, value: not null }
               - { key: mq.msg.id, value: not null }
               - { key: mq.offset.msg.id, value: not null }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 39
-            isError: false
-            spanType: Entry
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.msg.id, value: not null }
-              - { key: mq.offset.msg.id, value: not null }
-              - { key: mq.topic, value: not null }
-              - { key: mq.broker, value: not null }
-              - { key: mq.status, value: not null }
-            refs:
-              - { parentEndpoint: RocketMQ/sw-topic/Producer/Callback, networkAddress: 'http://mqnamesrv:9876',
-                  refType: CrossProcess, parentSpanId: 0, parentTraceSegmentId: not null,
-                  parentServiceInstance: not null, parentService: rocketmq,
-                  traceId: not null }
-      - segmentId: not null
-        spans:
           - operationName: RocketMQ/sw-topic/Producer
-            parentSpanId: -1
-            spanId: 0
+            parentSpanId: 0
+            spanId: 4
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -135,33 +98,7 @@ segmentItems:
             peer: http://mqnamesrv:9876
             skipAnalysis: false
             tags:
-              - { key: mq.topic, value: not null }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 39
-            isError: false
-            spanType: Entry
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.msg.id, value: not null }
-              - { key: mq.offset.msg.id, value: not null }
-              - { key: mq.topic, value: not null }
-              - { key: mq.broker, value: not null }
-              - { key: mq.status, value: not null }
-            refs:
-              - { parentEndpoint: RocketMQ/sw-topic/Producer, networkAddress: 'http://mqnamesrv:9876',
-                  refType: CrossProcess, parentSpanId: 0, parentTraceSegmentId: not null,
-                  parentServiceInstance: not null, parentService: rocketmq,
-                  traceId: not null }
-      - segmentId: not null
-        spans:
+              - { key: mq.topic, value: sw-topic }
           - operationName: GET:/execute
             parentSpanId: -1
             spanId: 0
@@ -177,5 +114,77 @@ segmentItems:
               - { key: http.method, value: GET }
               - { key: url, value: 'service:8080/execute' }
               - { key: status_code, value: '200' }
+      - segmentId: not null
+        spans:
+          - operationName: RocketMQ/sw-topic/Consumer
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 39
+            isError: false
+            spanType: Entry
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: not null }
+              - { key: mq.msg.id, value: not null }
+              - { key: mq.offset.msg.id, value: not null }
+              - { key: mq.broker, value: not null }
+              - { key: mq.status, value: not null }
+            refs:
+              - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
+                  refType: CrossProcess, parentSpanId: 4, parentTraceSegmentId: not null,
+                  parentServiceInstance: not null, parentService: rocketmq,
+                  traceId: not null }
+      - segmentId: not null
+        spans:
+          - operationName: RocketMQ/sw-topic/Consumer
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 39
+            isError: false
+            spanType: Entry
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: not null }
+              - { key: mq.msg.id, value: not null }
+              - { key: mq.offset.msg.id, value: not null }
+              - { key: mq.broker, value: not null }
+              - { key: mq.status, value: not null }
+            refs:
+              - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
+                  refType: CrossProcess, parentSpanId: 1, parentTraceSegmentId: not null,
+                  parentServiceInstance: not null, parentService: rocketmq,
+                  traceId: not null }
+      - segmentId: not null
+        spans:
+          - operationName: RocketMQ/sw-topic/Consumer
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 39
+            isError: false
+            spanType: Entry
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: not null }
+              - { key: mq.msg.id, value: not null }
+              - { key: mq.offset.msg.id, value: not null }
+              - { key: mq.broker, value: not null }
+              - { key: mq.status, value: not null }
+            refs:
+              - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
+                  refType: CrossProcess, parentSpanId: 2, parentTraceSegmentId: not null,
+                  parentServiceInstance: not null, parentService: rocketmq,
+                  traceId: not null }
 meterItems: [ ]
 logItems: [ ]
