--- a/test/plugins/scenarios/rocketmq/config/excepted.yml
+++ b/test/plugins/scenarios/rocketmq/config/excepted.yml
@@ -16,7 +16,7 @@
 
 segmentItems:
   - serviceName: rocketmq
-    segmentSize: 5
+    segmentSize: 2
     segments:
       - segmentId: not null
         spans:
@@ -55,94 +55,9 @@ segmentItems:
               - { key: mq.broker, value: not null }
               - { key: mq.msg.id, value: not null }
               - { key: mq.offset.msg.id, value: not null }
-          - operationName: RocketMQ/sw-topic/Producer/Callback # When calling, first create an Exit span
+          - operationName: RocketMQ/sw-topic/Consumer
             parentSpanId: 0
             spanId: 2
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 38
-            isError: false
-            spanType: Exit
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.topic, value: sw-topic }
-          - operationName: RocketMQ/sw-topic/Producer/Callback # The callback task creates a Local span
-            parentSpanId: 2
-            spanId: 3
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 38
-            isError: false
-            spanType: Local
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.topic, value: not null }
-              - { key: mq.status, value: not null }
-              - { key: mq.queue, value: not null }
-              - { key: mq.broker, value: not null }
-              - { key: mq.msg.id, value: not null }
-              - { key: mq.offset.msg.id, value: not null }
-          - operationName: RocketMQ/sw-topic/Producer
-            parentSpanId: 0
-            spanId: 4
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 38
-            isError: false
-            spanType: Exit
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.topic, value: sw-topic }
-          - operationName: GET:/execute
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: Http
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 5004
-            isError: false
-            spanType: Entry
-            peer: ''
-            skipAnalysis: false
-            tags:
-              - { key: http.method, value: GET }
-              - { key: url, value: 'service:8080/execute' }
-              - { key: status_code, value: '200' }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: MQ
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 39
-            isError: false
-            spanType: Entry
-            peer: http://mqnamesrv:9876
-            skipAnalysis: false
-            tags:
-              - { key: mq.topic, value: not null }
-              - { key: mq.msg.id, value: not null }
-              - { key: mq.offset.msg.id, value: not null }
-              - { key: mq.broker, value: not null }
-              - { key: mq.status, value: not null }
-            refs:
-              - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
-                  refType: CrossProcess, parentSpanId: 4, parentTraceSegmentId: not null,
-                  parentServiceInstance: not null, parentService: rocketmq,
-                  traceId: not null }
-      - segmentId: not null
-        spans:
-          - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -162,11 +77,40 @@ segmentItems:
                   refType: CrossProcess, parentSpanId: 1, parentTraceSegmentId: not null,
                   parentServiceInstance: not null, parentService: rocketmq,
                   traceId: not null }
-      - segmentId: not null
-        spans:
+          - operationName: RocketMQ/sw-topic/AsyncProducer # When calling, first create an Exit span.
+            parentSpanId: 0
+            spanId: 3
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 38
+            isError: false
+            spanType: Exit
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: sw-topic }
+          - operationName: RocketMQ/sw-topic/Producer/Callback # The callback task creates a Local span.
+            parentSpanId: 3
+            spanId: 4
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 38
+            isError: false
+            spanType: Local
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: not null }
+              - { key: mq.status, value: not null }
+              - { key: mq.queue, value: not null }
+              - { key: mq.broker, value: not null }
+              - { key: mq.msg.id, value: not null }
+              - { key: mq.offset.msg.id, value: not null }
           - operationName: RocketMQ/sw-topic/Consumer
-            parentSpanId: -1
-            spanId: 0
+            parentSpanId: 0
+            spanId: 5
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -183,8 +127,58 @@ segmentItems:
               - { key: mq.status, value: not null }
             refs:
               - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
-                  refType: CrossProcess, parentSpanId: 2, parentTraceSegmentId: not null,
+                  refType: CrossProcess, parentSpanId: 3, parentTraceSegmentId: not null,
                   parentServiceInstance: not null, parentService: rocketmq,
                   traceId: not null }
+          - operationName: RocketMQ/sw-topic/Producer
+            parentSpanId: 0
+            spanId: 6
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 38
+            isError: false
+            spanType: Exit
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: sw-topic }
+          - operationName: RocketMQ/sw-topic/Consumer
+            parentSpanId: 0
+            spanId: 7
+            spanLayer: MQ
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 39
+            isError: false
+            spanType: Entry
+            peer: http://mqnamesrv:9876
+            skipAnalysis: false
+            tags:
+              - { key: mq.topic, value: not null }
+              - { key: mq.msg.id, value: not null }
+              - { key: mq.offset.msg.id, value: not null }
+              - { key: mq.broker, value: not null }
+              - { key: mq.status, value: not null }
+            refs:
+              - { parentEndpoint: 'GET:/execute', networkAddress: 'http://mqnamesrv:9876',
+                  refType: CrossProcess, parentSpanId: 6, parentTraceSegmentId: not null,
+                  parentServiceInstance: not null, parentService: rocketmq,
+                  traceId: not null }
+          - operationName: GET:/execute
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5004
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: http.method, value: GET }
+              - { key: url, value: 'service:8080/execute' }
+              - { key: status_code, value: '200' }
 meterItems: [ ]
 logItems: [ ]
