feature: add support for AMQP (#165)

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -97,6 +97,7 @@ jobs:
           - fiber
           - echov4
           - rocketmq
+          - amqp
     steps:
       - uses: actions/checkout@v2
         with:
