--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -98,6 +98,7 @@ jobs:
           - echov4
           - rocketmq
           - amqp
+          - pulsar
     steps:
       - uses: actions/checkout@v2
         with:
