feature: add support for segmentio-kafka

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -99,6 +99,7 @@ jobs:
           - rocketmq
           - amqp
           - pulsar
+          - segmentio-kafka
     steps:
       - uses: actions/checkout@v2
         with:
