--- a/test/plugins/scenarios/segmentio-kafka/config/excepted.yml
+++ b/test/plugins/scenarios/segmentio-kafka/config/excepted.yml
@@ -16,7 +16,7 @@
 
 segmentItems:
   - serviceName: segmentio-kafka
-    segmentSize: 2
+    segmentSize: 3
     segments:
       - segmentId: not null
         spans:
@@ -34,9 +34,26 @@ segmentItems:
             tags:
               - { key: mq.broker, value: not null }
               - { key: mq.topic, value: not null }
+          - operationName: GET:/execute
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5004
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: http.method, value: GET }
+              - { key: url, value: 'service:8080/execute' }
+              - { key: status_code, value: '200' }
+      - segmentId: not null
+        spans:
           - operationName: Kafka/sw-topic/Consumer
-            parentSpanId: 0
-            spanId: 2
+            parentSpanId: -1
+            spanId: 0
             spanLayer: MQ
             startTime: nq 0
             endTime: nq 0
@@ -53,20 +70,5 @@ segmentItems:
                   refType: CrossProcess, parentSpanId: 1, parentTraceSegmentId: not null,
                   parentServiceInstance: not null, parentService: segmentio-kafka,
                   traceId: not null }
-          - operationName: GET:/execute
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: Http
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 5004
-            isError: false
-            spanType: Entry
-            peer: ''
-            skipAnalysis: false
-            tags:
-              - { key: http.method, value: GET }
-              - { key: url, value: 'service:8080/execute' }
-              - { key: status_code, value: '200' }
 meterItems: [ ]
 logItems: [ ]
