--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -100,6 +100,7 @@ jobs:
           - amqp
           - pulsar
           - segmentio-kafka
+          - go-elasticsearchv8
     steps:
       - uses: actions/checkout@v2
         with:
