feature: support higher versions of grpc-go
Signed-off-by: Alipebt <1160756683@qq.com>

--- a/test/plugins/scenarios/grpc/plugin.yml
+++ b/test/plugins/scenarios/grpc/plugin.yml
@@ -25,3 +25,10 @@ support-version:
       - v1.55.0
       - v1.56.0
       - v1.57.0
+      - v1.58.0
+  - go: 1.19
+    framework:
+      - v1.59.0
+      - v1.60.0
+      - v1.62.0
+      - v1.64.0
