--- a/test/plugins/scenarios/gin/config/excepted.yml
+++ b/test/plugins/scenarios/gin/config/excepted.yml
@@ -20,6 +20,27 @@ segmentItems:
     segments:
       - segmentId: not null
         spans:
+          - operationName: GET:/notFound
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5006
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - {key: http.method, value: GET}
+              - {key: url, value: 'localhost:8080/notFound'}
+              - {key: status_code, value: '404'}
+            refs:
+              - {parentEndpoint: 'GET:/consumer', networkAddress: 'localhost:8080', refType: CrossProcess,
+                 parentSpanId: 1, parentTraceSegmentId: not null, parentServiceInstance: not null,
+                 parentService: gin, traceId: not null}
+      - segmentId: not null
+        spans:
           - operationName: GET:/provider
             parentSpanId: -1
             spanId: 0
@@ -42,6 +63,21 @@ segmentItems:
                  parentService: gin, traceId: not null}
       - segmentId: not null
         spans:
+          - operationName: GET:/notFound
+            parentSpanId: 0
+            spanId: 1
+            spanLayer: Http
+            startTime: gt 0
+            endTime: gt 0
+            componentId: 5005
+            isError: false
+            spanType: Exit
+            peer: localhost:8080
+            skipAnalysis: false
+            tags:
+              - {key: http.method, value: GET}
+              - {key: url, value: 'localhost:8080/notFound'}
+              - {key: status_code, value: '404'}
           - operationName: GET:/provider
             parentSpanId: 0
             spanId: 1
