--- a/.github/workflows/skywalking-go.yaml
+++ b/.github/workflows/skywalking-go.yaml
@@ -25,10 +25,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - name: Set up Go 1.18
+      - name: Set up Go 1.19
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.19
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
         with:
@@ -48,7 +48,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest, macos-13, windows-latest ]
-        go-version: [ 1.18, 1.19 ]
+        go-version: [ 1.19 ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
