Add generated VERSION file into license ignoring list.

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -35,6 +35,7 @@ header:
     - 'dist/LICENSE.tpl'
     - '**/*.tmpl'
     - 'tools/go-agent/tools/testdata/*'
+    - 'VERSION'
 
   comment: on-failure
 
