fix: add logging item in CI
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -92,6 +92,7 @@ jobs:
           - grpc
           - irisv12
           - trace-activation
+          - logging-activation
           - fasthttp
           - discard-reporter
           - fiber
