fix:Complete relevant test cases, configure CI, and update  CHANGES.md support-plugins.md

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -102,6 +102,7 @@ jobs:
           - pulsar
           - segmentio-kafka
           - go-elasticsearchv8
+          - goframe
     steps:
       - uses: actions/checkout@v2
         with:
