--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-14]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
@@ -46,7 +46,7 @@ jobs:
         run: |
           brew install docker colima
           colima delete
-          colima start --memory 4 --arch arm64
+          colima start --memory 4 --arch x86_64
 
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
@@ -134,7 +134,7 @@ jobs:
           name: test-plugins-workspace-${{ matrix.case }}-ubuntu
 
   test-on-macos:
-    if: always()
+    if: false
     name: gin-macos
     needs:
       - build
@@ -161,7 +161,7 @@ jobs:
         run: |
           brew install docker colima
           colima delete
-          colima start --memory 4 --arch arm64
+          colima start --memory 4 --arch x86_64
 
           # For testcontainers to find the Colima socket
           # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
@@ -194,12 +194,11 @@ jobs:
     name: Plugin Tests
     needs:
       - test
-      - test-on-macos
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: Merge Requirement
         run: |
-          if [[ ${{ needs.test.result }} != 'success' || ${{ needs.test-on-macos.result }} != 'success' ]]; then
+          if [[ ${{ needs.test.result }} != 'success' ]]; then
             exit -1
           fi
