--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-12]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
@@ -57,7 +57,7 @@ jobs:
           submodules: true
       - name: Build
         run: make -C test/plugins build
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         name: Upload Test Base
         with:
           name: test-tools-${{ matrix.os }}
@@ -106,7 +106,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: test-tools-ubuntu-latest
           path: test/plugins/dist
@@ -126,7 +126,7 @@ jobs:
           fi
       - name: Run Test
         run: bash test/plugins/run.sh ${{ matrix.case }}
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         name: Upload Agent
         if: ${{ failure() }}
         with:
@@ -134,7 +134,7 @@ jobs:
           name: test-plugins-workspace-${{ matrix.case }}-ubuntu
 
   test-on-macos:
-    if: always()
+    if: false
     name: gin-macos
     needs:
       - build
@@ -144,7 +144,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: test-tools-macos-12
           path: test/plugins/dist
@@ -182,7 +182,7 @@ jobs:
           fi
       - name: Run Test
         run: bash test/plugins/run.sh short_versions_gin
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         name: Upload Agent
         if: ${{ failure() }}
         with:
@@ -194,12 +194,11 @@ jobs:
     name: Plugin Tests
     needs:
       - test
-      - test-on-macos
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: Merge Requirement
         run: |
-          if [[ ${{ needs.test.result }} != 'success' || ${{ needs.test-on-macos.result }} != 'success' ]]; then
+          if [[ ${{ needs.test.result }} != 'success' ]]; then
             exit -1
           fi
