fix:ci goframe plugins config tags check 3

--- a/test/plugins/scenarios/goframe/config/excepted.yml
+++ b/test/plugins/scenarios/goframe/config/excepted.yml
@@ -57,8 +57,6 @@ segmentItems:
             tags:
               - {key: http.method, value: GET}
               - {key: url, value: 'localhost:8080/provider'}
-              - {key: http.params, value: 'test=1'}
-              - {key: http.headers, value: "h1=h1-value\nh2=h2"}
               - {key: status_code, value: '200'}
           - operationName: GET:/consumer
             parentSpanId: -1
@@ -74,6 +72,7 @@ segmentItems:
             tags:
               - {key: http.method, value: GET}
               - {key: url, value: 'service:8080/consumer'}
+              - {key: http.params, value: ''}
               - {key: status_code, value: '200'}
 meterItems: []
 logItems: []
