test: impl histogram of toolkit/metric
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/test/plugins/scenarios/metric-activation/config/excepted.yml
+++ b/test/plugins/scenarios/metric-activation/config/excepted.yml
@@ -37,4 +37,25 @@ meterItems:
           tags:
             - { name: foo, value: bar }
         singleValue: ge 30
+      - meterId:
+          name: request_duration
+          tags: []
+        histogramBuckets:
+          - 5
+          - 20
+          - 50
+          - 100
+          - 500
+          - 1000
+      - meterId:
+          name: request_duration_with_label
+          tags:
+            - { name: foo, value: bar }
+        histogramBuckets:
+            - 5
+            - 20
+            - 50
+            - 100
+            - 500
+            - 1000
 logItems: []
