chore: add CI test entry and CHANGES log
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -93,6 +93,7 @@ jobs:
           - irisv12
           - trace-activation
           - logging-activation
+          - metric-activation
           - fasthttp
           - discard-reporter
           - fiber
