--- a/test/plugins/scenarios/metric-activation/config/excepted.yml
+++ b/test/plugins/scenarios/metric-activation/config/excepted.yml
@@ -41,21 +41,39 @@ meterItems:
           name: request_duration
           tags: []
         histogramBuckets:
-          - 5
-          - 20
-          - 50
-          - 100
-          - 500
-          - 1000
+          - 0.0
+          - 5.0
+          - 20.0
+          - 50.0
+          - 100.0
+          - 500.0
+          - 1000.0
+        histogramValues:
+          - 0
+          - 1
+          - 3
+          - 0
+          - 1
+          - 0
+          - 1
       - meterId:
           name: request_duration_with_label
           tags:
             - { name: foo, value: bar }
         histogramBuckets:
-            - 5
-            - 20
-            - 50
-            - 100
-            - 500
-            - 1000
+          - 0.0
+          - 5.0
+          - 20.0
+          - 50.0
+          - 100.0
+          - 500.0
+          - 1000.0
+        histogramValues:
+          - 0
+          - 1
+          - 0
+          - 0
+          - 2
+          - 2
+          - 1
 logItems: []
