feat(go-zero): The GoZero framework supports enhancements for REST, ZRPC, and LogX.

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -104,6 +104,7 @@ jobs:
           - segmentio-kafka
           - go-elasticsearchv8
           - goframe
+          - gozero
     steps:
       - uses: actions/checkout@v2
         with:
