Fix cannot find file when exec build in test/plugins

--- a/tools/go-agent/Makefile
+++ b/tools/go-agent/Makefile
@@ -30,6 +30,9 @@ ifeq ($(strip $(GIT_COMMIT)),)
     GIT_COMMIT = $(shell grep gitCommit $(VERSION_PATH) | awk -F ': ' '{print $$2}')
 endif
 VERSION ?= $(shell grep version $(VERSION_PATH) | awk -F ': ' '{print $$2}')
+ifeq ($(strip $(VERSION)),)
+    VERSION = $(GIT_COMMIT)
+endif
 
 GO_VERSION := $(shell $(GO) env GOVERSION)
 VERSION_PACKAGE := main
