modify excepted.yml, /errortest exitspan's isError is false

--- a/test/plugins/scenarios/http/config/excepted.yml
+++ b/test/plugins/scenarios/http/config/excepted.yml
@@ -80,7 +80,7 @@ segmentItems:
             startTime: gt 0
             endTime: gt 0
             componentId: 5005
-            isError: true
+            isError: false
             spanType: Exit
             peer: localhost:8080
             skipAnalysis: false
