change http excepted.yml data, /errortest exitspan isError is true

--- a/test/plugins/scenarios/http/config/excepted.yml
+++ b/test/plugins/scenarios/http/config/excepted.yml
@@ -64,7 +64,7 @@ segmentItems:
             startTime: gt 0
             endTime: gt 0
             componentId: 5005
-            isError: false
+            isError: true
             spanType: Exit
             peer: localhost:8080
             skipAnalysis: false
