1、remove wrapped.write from server_intercepter_test method call， this method is deleted 2、change gin excepted data /notFound isError=true

--- a/test/plugins/scenarios/gin/config/excepted.yml
+++ b/test/plugins/scenarios/gin/config/excepted.yml
@@ -49,7 +49,7 @@ segmentItems:
             startTime: nq 0
             endTime: nq 0
             componentId: 5006
-            isError: false
+            isError: true
             spanType: Entry
             peer: ''
             skipAnalysis: false
@@ -85,7 +85,7 @@ segmentItems:
             startTime: gt 0
             endTime: gt 0
             componentId: 5005
-            isError: false
+            isError: true
             spanType: Exit
             peer: localhost:8080
             skipAnalysis: false
