Support span in error status when http code >= 400, and add trace#Error in toolkit API (#212)

--- a/test/plugins/scenarios/http/config/excepted.yml
+++ b/test/plugins/scenarios/http/config/excepted.yml
@@ -57,6 +57,21 @@ segmentItems:
               - {key: http.method, value: GET}
               - {key: url, value: 'localhost:8080/provider'}
               - {key: status_code, value: '200'}
+          - operationName: GET:/errortest
+            parentSpanId: 0
+            spanId: 2
+            spanLayer: Http
+            startTime: gt 0
+            endTime: gt 0
+            componentId: 5005
+            isError: true
+            spanType: Exit
+            peer: localhost:8080
+            skipAnalysis: false
+            tags:
+              - {key: http.method, value: GET}
+              - {key: url, value: 'localhost:8080/errortest'}
+              - {key: status_code, value: '500'}
           - operationName: GET:/consumer
             parentSpanId: -1
             spanId: 0
@@ -73,5 +88,27 @@ segmentItems:
               - {key: url, value: 'service:8080/consumer'}
               - {key: http.params, value: ''}
               - {key: status_code, value: '200'}
+      - segmentId: not null
+        spans:
+          - operationName: GET:/errortest
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5004
+            isError: true
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - {key: http.method, value: GET}
+              - {key: url, value: 'localhost:8080/errortest'}
+              - {key: http.params, value: ''}
+              - {key: status_code, value: '500'}
+            refs:
+              - {parentEndpoint: 'GET:/consumer', networkAddress: 'localhost:8080', refType: CrossProcess,
+                 parentSpanId: 2, parentTraceSegmentId: not null, parentServiceInstance: not null,
+                 parentService: http, traceId: not null}
 meterItems: []
 logItems: []
